[IBX-1] Had to change .pop-closed to also move object way off the screen to stop phantom scrollbars.

--- a/src/main/resources/META-INF/resources/ibx/resources/css/popup.ibx.css
+++ b/src/main/resources/META-INF/resources/ibx/resources/css/popup.ibx.css
@@ -59,6 +59,8 @@ iframe.ibx-popup-disabled-iframe
 /*visiual effects*/
 .pop-closed:not(.pop-closing)
 {
+	left:-1000000px;
+	top:-1000000px;
 	visibility:hidden;
 }
 
